done the responsiveness on the first page

--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
 <body>
     <header class="hero-section">
         <img class="hero-background" src="./resources/images/background no words or logo edited.jpg" alt="Cows grazing in lush green field">
-        <h2>Export-quality Ozzie beef. Join the club today.</h2>
+        <h2>Export-quality Ozzie beef - join the club today</h2>
         <a href="./contact.html" class="contact-link"><h5>Contact us</h5></a>
-        <div>
+        <div id="about-us-container">
             <h3>About Us</h3>
-            <p>It is a well-known fact that most of Australia's best quality beef is exported to countries who are willing to pay exorbitant rates. Put simply, this means that the average Joe in Australia is getting second-rate beef, whether he likes it or not, and we think this is ridiculous. The Beef Club is a business dedicated to sourcing the best beef in Australia, for Australians. We constantly strive to find ways of ensuring the supply is direct so that prices can be kept reasonable. We love our country, we love our farmers, we love our customers, and we love what we do - finding and supplying the best beef in Australia, direct to your door.</p>
+            <p id="long-about">It is a well-known fact that most of Australia's best quality beef is exported to countries who are willing to pay exorbitant rates. Put simply, this means that the average Joe in Australia is getting second-rate beef, whether he likes it or not, and we think this is ridiculous. The Beef Club is a business dedicated to sourcing the best beef in Australia, for Australians. We constantly strive to find ways of ensuring the supply is direct so that prices can be kept reasonable. We love our country, we love our farmers, we love our customers, and we love what we do - finding and supplying the best beef in Australia, direct to your door.</p>
+            <p id="short-about">The Beef Club is a business dedicated to sourcing the best beef in Australia, for Australians. We constantly strive to find ways of ensuring the supply is direct so that prices can be kept reasonable. We love our country, we love our farmers, we love our customers, and we love what we do - finding and supplying the best beef in Australia, direct to your door.</p>
+            <p id="very-short-about">The Beef Club is a business dedicated to sourcing the best beef in Australia, for Australians.We love our country, we love our farmers, we love our customers, and we love what we do - finding and supplying the best beef in Australia, direct to your door.</p>
         </div>
         <img class="hero-logo" src="./resources/images/white logo transparent.png" alt="White Beef Club logo">
     </header>
