--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <div class="unapologetically-beef">
             <img src="./resources/images/square/BC_LOGO-BLACK.png" alt="Black Beef Club Logo">
-            <h3>Unapologetically beef.</h3>
+            <h3>Unapologetically beef</h3>
     </div>
 
     <div class="pack-details">
