made readable changed wording made it fit

--- a/index.html
+++ b/index.html
@@ -16,19 +16,21 @@
         <a href="#jotform" class="contact-link"><h5>Contact us</h5></a>
         <div id="about-us-container">
             <h3>About Us</h3>
-            <p id="long-about">We are Southern Highlands based farmers raising premium grass fed beef. </p>
-            <p id="short-about">We are Southern Highlands based farmers raising premium grass fed beef. </p>
-            <p id="very-short-about">We are Southern Highlands based farmers raising premium grass fed beef. </p>
+            <p id="long-about">We run a small family operated herd of quality beef cattle in the Southern Highlands. </p>
+            <p id="short-about">We run a small family operated herd of quality beef cattle in the Southern Highlands. </p>
+            <p id="very-short-about">We run a small family operated herd of quality beef cattle in the Southern Highlands. </p>
         </div>
         <img class="hero-logo" src="./resources/images/white logo transparent.png" alt="White Beef Club logo">
     </header>
 
     <main class="revolution">
         <aside class="revolution-text">
-            <h3>Sustainable Practices</h3>
-            <p>Our animals live in open paddocks having full access to shade and fresh water. </p>
-            <p>Our calves stay with their mothers until they naturally separate.</p>
-            <p>All our beef is hormone  and Bovaer free and we never feed any additives.</p>
+            <h3>Paddock to Plate</h3>
+            <p>Our animals are free to roam in open paddocks with full access to fresh water and shade from native trees.</p>
+            <p>We use no Bovaer, growth promotors or hormones for a natural, healthy end product.</p>
+            <p>Our cattle are grass fed, taking longer to mature as a result, but good results are worth the wait.</p>
+            <p>Slow grown beef is leaner and healthier than grain fed alternatives.</p>
+            <p>Reared sustainably in the Southern Highlands, our beef accumulates very few food miles as it is born and raised in Burradoo, processed in Picton and butchered in Bowral.</p>
         </aside>
 
         <section class="revolution-image">
@@ -79,9 +81,9 @@
             </div>
 
 
-        <h3>Please note, all meat packs are to be collected from Bowral. Delivery for a modest fee is available within the Southern Highlands by pre-arrangement.</h3>
+        <h3 class="hardtoread">Please note, all meat packs are to be collected from Bowral. Delivery for a modest fee is available within the Southern Highlands by pre-arrangement.</h3>
             <br>
-        <h3>Whole sides and quarters of beef are available at a discounted rate, please enquire.</h3>
+        <h3 class="hardtoread">Whole sides and quarters of beef are available at a discounted rate, please enquire.</h3>
     </div>
     
     
